--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ndn.cxx (0.2.1-1ppa1~1saucy1) saucy; urgency=low
+
+  * Making release for saucy
+
+ -- Alexander Afanasyev <alexander.afanasyev@ucla.edu>  Wed, 13 Nov 2013 15:42:50 -0800
+
 ndn.cxx (0.2.1-1ppa1~1precise1) precise; urgency=low
 
   * Fixing bug with certificate cache cleanup
